[package]
name = "cdec"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
codespan = "0.13.1"
codespan-reporting = "0.13.1"
indexmap = "2.13.0"
insta = "1.46.1"
lazy_static = "1.5.0"
num = "0.4.3"
pest = { version = "2.8.5", features = ["pretty-print"] }
pest_derive = { version = "2.8.5", features = ["grammar-extras"] }

[dev-dependencies]
regex = "1.12.2"