[package]
name = "cdec"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.10"
chrono = "0.4.42"
clap = { version = "4.5.60", features = ["derive"] }
codespan = "0.13.1"
codespan-reporting = "0.13.1"
indexmap = "2.13.0"
insta = "1.46.1"
lazy_static = "1.5.0"
num = "0.4.3"
pest = { version = "2.8.5", features = ["pretty-print"] }
pest_derive = { version = "2.8.5", features = ["grammar-extras"] }

[dependencies.inkwell]
version = "0.8.0"
default-features = false
features = [
    "llvm21-1",
    "target-x86",
]

[workspace]
members = ["linker"]

[profile.dev]
overflow-checks = false

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }